web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
/* ... */
.deleteDiagnos {
  cursor:pointer;
  background-color: transparent;
  border: none;
}
#diagnoseCode {
  border-radius: 4px!important;
}

.valjkodverk {
  margin-right: 15px;
}

/*
Modular modifiers
*/

.padding-top-small {
  padding-top: 5px;
}

.padding-top-medium {
  padding-top: 15px;
}

.padding-top-large {
  padding-top: 30px;
}

.relative-anchor {
  position:relative;
}

.anchor-right {
  position: absolute;
  right: 0;
}

/*
wc cookie banner css.
(the extreme z-index is to make sure the banner is on top of any .stat-circle's)
*/
.wc-cookie-banner-directive {

  margin: 0;
  top: 0;
  position: fixed;
  right: 0;
  left: 0;
  border: none;
  z-index: 1010;

  .alert {
    max-width: inherit;
    border-radius: 0;
    margin-bottom: 0;
  }
  .container-fluid {
    padding: 0;
  }

}

.empty {
  color: #a9a9a9;
}

.forward-active {
  color: white;
}

.forward-inactive {
  color: black;
}

